2024-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc,
	  src/f8/gen.c,
	  src/f8/peep.c,
	  support/regression/tests/largeoddstruct.c.in:
	  Change destination operand to y-relative for f8 ld(w)i instruction.

2024-12-01 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCast.c:
	  Fix typeofOp not using the actual decorated tree.

2024-11-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/ralloc2.cc:
	  pdk stack allocation improvement.
	* src/f8/gen.c:
	  Fix a corner case in f8 block move codegen optimization.

2024-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/f8/ralloc2.cc:
	  Small f8 codegen and stack allocation improvements.

2024-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Improve f8 code generation for pointer access and left shift.
	* src/f8/ralloc.c,
	  src/stm8/ralloc.c:
	  Code cleanup.

2024-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/ialu.cc:
	  Fix simulation of msk instruction.
	* src/f8/gen.c:
	  Use msk instruction in codegen for bit-field writes.

2024-11-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc:
	  ld(w) prefix fixes.
	* src/f8/gen.c:
	  Improve f8 codegen for writes via pointer.

2024-11-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/Makefile.in
	  support/regression/ports/*/spec.mk:
	  Since we have the cycle timeout now, the realtime-timeout has become less important. So don't bother maintaining is separately at the port level.

2024-11-24 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCast.c,
	  support/regression/tests/bug-3802.c:
	  Fix bug #3802.

2024-11-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,